--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
