--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tailwindcss/vite": "^4.1.12",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
